[package]
name = "plotters-canvas"
version = "0.3.0"
authors = ["HagbardCeline"]
edition = "2018"


[dependencies.plotters-backend]
git = "https://github.com/plotters-rs/plotters"

[dependencies]
js-sys= "0.3.32"
wasm-bindgen = "0.2.55"

[dependencies.web-sys]
version = "0.3.32"
features = ['Document', 'DomRect', 'Element', 'HtmlElement', 'Node', 'Window', 'HtmlCanvasElement', 'CanvasRenderingContext2d']

[dev-dependencies]
wasm-bindgen-test = "^0.3.17"

[dev-dependencies.plotters]
default_features = false
git = "https://github.com/plotters-rs/plotters"